# thread-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/: CODESTYLE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  release-drafter.yml  settings.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-failing-test.md  3-docs-bug.md  4-feature-request.md  5-enhancement-request.md  6-security-report.md
.github/workflows/: draft-release-tag.yml  release.yml  test-worker.yml
src/thread-cli/: __init__.py  base.py  process.py
src/thread-cli/utils/: __init__.py  logging.py  processors.py
tests/: test_placeholder.py
