[tool.poetry]
name = "thread-cli"
version = "0.1.1"
description = "Threading module extension's CLI"
authors = ["Alex <contact@ngjx.org>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
  { include = "thread-cli", from = "src" },
  { include = "thread-cli/py.typed", from = "src" },
]
include = [{ path = "tests", format = "sdist" }]
homepage = "https://github.com/python-thread/thread-cli"
repository = "https://github.com/python-thread/thread-cli"
documentation = "https://thread.ngjx.org"
keywords = ["thread", "threading", "cli", "cli-extension"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

[tool.poetry.urls]
Changelog = "https://github.com/python-thread/thread-cli/releases"
"Bug Tracker" = "https://github.com/python-thread/thread-cli/issues"

[tool.poetry.dependencies]
python = "^3.9"
thread = "^1.0.0"
typer = "^0.9.0"
rich = "^13.7.1"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
